--- a/project1.html
+++ b/project1.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fayal's Portfolio</title>
-    <link rel="stylesheet" href="project.css" />
+    <link rel="stylesheet" href="project1.css" />
   </head>
   <body>
     <div class="container">
       <p>Fayal Subedi</p>
       <ul class="nav">
-        <a href="project.html">
+        <a href="project1.html">
           <li>Home</li>
         </a>
         <a href="#fayal1">
